// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Main > should support js output format for 'maxItems' errors 1`] = `
[
  {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "error": "/: Array must NOT have more than 2 items",
    "path": "",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
]
`;

exports[`Main > should support js output format for 'minItems' errors 1`] = `
[
  {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "error": "/: Array must NOT have fewer than 4 items",
    "path": "",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
]
`;

exports[`Main > should support js output format for 'uniqueItem' errors 1`] = `
[
  {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "error": "/: Array must NOT have duplicate items (items ## 1 and 0 are identical)",
    "path": "",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
]
`;

exports[`Main > should support js output format for additionalProperties errors 1`] = `
[
  {
    "end": {
      "column": 27,
      "line": 1,
      "offset": 26,
    },
    "error": " Property baz is not expected to be here",
    "path": "",
    "start": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;

exports[`Main > should support js output format for default errors 1`] = `
[
  {
    "end": {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "error": "/id: type must be number",
    "path": "/id",
    "start": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
  },
]
`;

exports[`Main > should support js output format for enum errors 1`] = `
[
  {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "error": "/id must be equal to one of the allowed values: foo, bar",
    "path": "/id",
    "start": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "suggestion": "Did you mean bar?",
  },
]
`;

exports[`Main > should support js output format for required errors 1`] = `
[
  {
    "error": "/nested must have required property 'id'",
    "path": "/nested",
    "start": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
  },
]
`;
